# dev-autopilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  README.zh-TW.md  bootstrap-prompt.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.devap/: release-config.json
.standards/: agent-dispatch.ai.yaml  branch-completion.ai.yaml  checkin-standards.ai.yaml  git-workflow.ai.yaml  git-worktree.ai.yaml  manifest.json  model-selection.ai.yaml  push-standards.ai.yaml  requirement-template.md  systematic-debugging.ai.yaml  test-case-template.md  (+4 more)
python/: pyproject.toml
python/devap/: __init__.py  __main__.py  claudemd_generator.py  fix_loop.py  judge.py  orchestrator.py  plan_resolver.py  plan_validator.py  quality_gate.py  quality_profile.py  worktree_manager.py
python/devap/adapters/: __init__.py  claude_adapter.py  cli_adapter.py  opencode_adapter.py  vibeops_adapter.py
python/devap/capabilities/: __init__.py  capability_registry.py  model_router.py  types.py
python/devap/commands/: __init__.py  init_cmd.py  sync_standards.py
python/devap/hooks/: __init__.py  safety_hook.py
python/devap/models/: __init__.py  types.py
python/tests/: test_capability_registry.py  test_claude_adapter.py  test_claudemd_generator.py  test_cli_adapter.py  test_e2e.py  test_fix_loop.py  test_init_cmd.py  test_judge.py  test_opencode_adapter.py  test_orchestrator.py  test_plan_resolver.py  test_plan_validator.py  test_quality_gate.py  test_quality_profile.py  test_safety_hook.py  test_sync_standards.py  test_types.py  test_vibeops_adapter.py  test_worktree_manager.py
(+88 files in other folders)
